--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,19 @@
 <paper-material elevation='1'>
-	<h2>My webdev playground</h2>
+	<h1>My webdev playground</h1>
+</paper-material>
+
+<paper-material>
+
+	<div class="icon-container">
+		<img class='tech-icon' src="../assets/images/html5.png" alt="" title="HTML5">
+		<img class='tech-icon' src="../assets/images/css.png" alt="" title="CSS">
+		<img class='tech-icon' src="../assets/images/js.png" alt="" title="JavaScript">
+		<img class='tech-icon' src="../assets/images/angular.jpeg" alt="" title="AngularJS">
+		<img class='tech-icon' src="../assets/images/polymer.png" alt="" title="Polymer">
+		<img class='tech-icon' src="../assets/images/bower.png" alt="" title="Bower">
+		<img class='tech-icon' src="../assets/images/gulp.jpeg" alt="" title="Gulp">
+		<img class='tech-icon' src="../assets/images/yeoman.jpeg" alt="" title="Yeoman">
+		<img class='tech-icon' src="../assets/images/firebase.png" alt="" title="Firebase">
+	</div>
+
 </paper-material>
