Remove old projects, rename sandbox to skills development, style adjustments

--- a/views/home.html
+++ b/views/home.html
@@ -8,12 +8,18 @@
 		<img class='tech-icon' src="../assets/images/html5.png" alt="" title="HTML5">
 		<img class='tech-icon' src="../assets/images/css.png" alt="" title="CSS">
 		<img class='tech-icon' src="../assets/images/js.png" alt="" title="JavaScript">
-		<img class='tech-icon' src="../assets/images/angular.jpeg" alt="" title="AngularJS">
+		<img class='tech-icon' src="../assets/images/angular.png" alt="" title="AngularJS">
 		<img class='tech-icon' src="../assets/images/polymer.png" alt="" title="Polymer">
 		<img class='tech-icon' src="../assets/images/bower.png" alt="" title="Bower">
-		<img class='tech-icon' src="../assets/images/gulp.jpeg" alt="" title="Gulp">
+		<img class='tech-icon' src="../assets/images/gulp.png" alt="" title="Gulp">
 		<img class='tech-icon' src="../assets/images/yeoman.jpeg" alt="" title="Yeoman">
 		<img class='tech-icon' src="../assets/images/firebase.png" alt="" title="Firebase">
+		<img class='tech-icon' src="../assets/images/bootstrap.png" alt="" title='bootstrap'>
+		<img class='tech-icon' src="../assets/images/babel.png" alt="" title='babel'>
+		<img class='tech-icon' src="../assets/images/istanbul.png" alt="" title='istanbul'>
+		<img class='tech-icon' src="../assets/images/sass.png" alt="" title='sass'>
+		<img class='tech-icon' src="../assets/images/stylus.png" alt="" title='stylus'>
+		<img class='tech-icon' src="../assets/images/typescript.png" alt="" title='typescript'>
 	</div>
 
 </paper-material>
