--- a/views/projects.html
+++ b/views/projects.html
@@ -3,10 +3,6 @@
 </paper-material> 
 
 <paper-material elevation='1'>	
-	<h2><a href="../projects/melon/index.html">Platform Game</a></h2>
-
-	<h2><a href="../projects/quintus/quintus.html">Quintus Game</a></h2>
-
-	<h2><a href="../projects/sprites/index.html">Sprites</a></h2>
+	<h2><a href="../projects/melon/index.html" style='display: flex; align-items:center'><img src='../assets/images/melonJS.jpg' style='height: 50px; margin-right: 30px'> MelonJs Game</a></h2>
 
 </paper-material>
