--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ paper-material {
 	max-width: 900px;
 	margin: 0 auto;
 	text-align: center;
-	margin-top: 10px;
+	margin-top: 50px;
 }
 
 paper-material a {
@@ -52,6 +52,25 @@ paper-tabs a {
 	z-index: 1;
 }
 
+.icon-container {
+
+}
+
+.skills-box {
+	display: flex;
+	flex-direction: row;
+	padding: 20px;
+}
+
+.skills-item {
+	flex-grow: 1;
+}
+
+.skills-title {
+	border-bottom:1px solid gray;
+	padding-bottom: 10px;
+}
+
 .container, pre {
 	text-align: left;
 }
@@ -63,8 +82,8 @@ paper-tabs a {
 }
 
 .tech-icon {
-	height: 150px;
-	margin: 40px;
+	height: 50px;
+    margin: 10px
 }
 
 .title {
