Add web component skills section, update gulp watch

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <paper-material elevation='1'>
-	<h1>My webdev playground</h1>
+	<h1>I love web development</h1>
 
 	<div class="icon-container">
 		<img class='tech-icon' src="../assets/images/html5.png" alt="" title="HTML5">
