--- a/views/skills.html
+++ b/views/skills.html
@@ -23,6 +23,13 @@
 		<div class='skills-item'><a href="">Master</a></div class='skills-item'>
 	</div>
 
+	<h3 class='skills-title'>Web Components</h3>
+	<div class='skills-box'>
+		<div class='skills-item'><a href="#/wc/apprentice">Apprentice</a></div class='skills-item'>
+		<div class='skills-item'><a href="">Journeyman</a></div class='skills-item'>
+		<div class='skills-item'><a href="">Master</a></div class='skills-item'>
+	</div>
+
 </paper-material>
 
 
