--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,11 @@ body {
   margin: 0;
 }
 
+p {
+  font-size: 18px;
+  line-height: 1.5em;
+}
+
 h1 {
 	font-size: 42px;
 }
@@ -47,13 +52,14 @@ paper-tabs a {
 }
 
 pre {
-	background-color: aqua;
+  width: 600px;
 	overflow-x: scroll;
 }
 
 code {
-	font-family: Courier, 'New Courier' , monospace
+  font-size: 16px;
 }
+
 
 #headerLayout {
 	z-index: 1;
