--- a/views/projects.html
+++ b/views/projects.html
@@ -1,2 +1,3 @@
 <h1>Projects</h1>	
 <h2><a href="../projects/melon/index.html" style='display: flex; align-items:center'><img src='../assets/images/melonJS.jpg' style='height: 50px; margin-right: 30px'> MelonJs Game</a></h2>
+<h2><a href="../projects/snake.html">Canvas Snake</a></h2>
