--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,11 @@
-<h1>Home</h1>
+<div class="page-title">
+	<h1>Home</h1>
+</div>
 
-<h4>This is a site for trying new things 😄</h4>
+<div class="page-content">
+	<h4>This is a site for trying new things 😄</h4>
+</div>
+
+
+
 
