Add format to other pages

--- a/views/html5/apprentice.html
+++ b/views/html5/apprentice.html
@@ -1,8 +1,8 @@
-<paper-material elevation='1'>
-	<h2>Apprentice</h2>
-</paper-material>
+<div class="page-title">
+	<h1>HTML Apprentice</h1>
+</div>
 
-<paper-material>
+<div class="page-content">
   <header>
   	<h3>Semantic HTML5 Elements</h3>
 		<h5>This is the header</h5>
@@ -36,4 +36,4 @@
 			<label>Phone:</label><input type="phone" name="phone">
 		</form>
 	</article>
-</paper-material>
+</div>
