--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -1,4 +1,4 @@
-<paper-material elevation='1'>
+<div class="page-content">
     <h1>JavaScript Apprentice Badge</h1>
     <h2>Micro Badges</h2>
     <div class="container">
@@ -106,4 +106,4 @@
         <h3>Debugging</h3>
     </div>
 
-</paper-material>
+</div>
