--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,16 @@
-<div class="page-title">
+<div class="page-title page-home">
 	<h1>Home</h1>
 </div>
 
 <div class="page-content">
-	<h4>This is a site for trying new things 😄</h4>
+
+	<h2>Welcome</h2>
+	<p>
+		Hello. I am Chad Eddington. I am a web devloper. I created this web site as a place for me to 
+		work and play. This is where I keep links to different projects and experiements I am
+		working on. I also have a section that tracks progress and assignments for a skills development
+		program. 
+	</p>
 </div>
 
 
