--- a/views/skills.html
+++ b/views/skills.html
@@ -1,31 +1,31 @@
-<div class="page-title">
+<div class="page-title page-skills">
 	<h1>Skills Development</h1>
 </div>
 <div class="page-content">
 	<p>Taken from <a href="https://github.com/fs-webdev/skill-building-program">Family Search Skill Building Program</a></p>
 
-	<h3 class='skills-title'>HTML5</h3>
+	<h2 class='skills-title'>HTML5</h2>
 	<div class='skills-box'>
 		<div class='skills-item'><a href="#/html5/apprentice">Apprentice</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Journeyman</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Master</a></div class='skills-item'>
 	</div>
 
-	<h3 class='skills-title'>JavaScript</h3>
+	<h2 class='skills-title'>JavaScript</h2>
 	<div class='skills-box'>
 		<div class='skills-item'><a href="#/javascript/apprentice">Apprentice</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Journeyman</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Master</a></div class='skills-item'>
 	</div>
 
-	<h3 class='skills-title'>Performance</h3>
+	<h2 class='skills-title'>Performance</h2>
 	<div class='skills-box'>
 		<div class='skills-item'><a href="">Apprentice</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Journeyman</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Master</a></div class='skills-item'>
 	</div>
 
-	<h3 class='skills-title'>Web Components</h3>
+	<h2 class='skills-title'>Web Components</h2>
 	<div class='skills-box'>
 		<div class='skills-item'><a href="#/wc/apprentice">Apprentice</a></div class='skills-item'>
 		<div class='skills-item'><a href="">Journeyman</a></div class='skills-item'>
