--- a/styles/main.css
+++ b/styles/main.css
@@ -74,6 +74,10 @@ code {
 	align-items: center;
 	justify-content: center;
 	background-size: cover;
+	position: fixed;
+	top: 50px;
+	width: 100%;
+	z-index: -1;
 }
 
 .page-home {
@@ -96,7 +100,7 @@ code {
 
 .page-content {
 	max-width: 1000px;
-	margin: 0 auto;
+	margin: 300px auto;
 	height: 100%;
 	padding: 10px;
 }
@@ -154,6 +158,14 @@ li.show pre.large {
 	.page-title {
 		height: 150px;
 		background-position-y: 0px;
+	}
+
+	.page-title h1 {
+		font-size: 36px;
+	}
+
+	.page-content {
+		margin-top: 150px;
 	}
 }
 
