--- a/views/javascript/languageBasics.html
+++ b/views/javascript/languageBasics.html
@@ -153,7 +153,7 @@
 
           n^3 + (n-1)^3 + ... + 1^3 = m
 
-        <pre class="small">
+        <pre class="large">
         
         <code>
           var findN = function(m) {
