Add phaser sample

--- a/views/projects.html
+++ b/views/projects.html
@@ -5,4 +5,5 @@
 <div class="page-content">
 	<h2><a href="../projects/melon/index.html"> MelonJs Game</a></h2>
 	<h2><a href="../projects/snake.html">Canvas Snake</a></h2>
+	<h2><a href="../projects/phaser/phaser-dude/phaser-dude.html">Phaser Dude</a></h2>
 </div>
