--- a/views/javascript/languageBasics.html
+++ b/views/javascript/languageBasics.html
@@ -6,123 +6,123 @@
   <h3> Solve at least 10 total JavaScript coding problems on these sites, then demonstrate and show your solutions:</h3>
   <ol>
     <li class="code-block" onClick='toggleBlock(event)'>
-      Using the JavaScript language, have the function FirstReverse(str) take the str parameter being passed and return the string in reversed order. 
+      Using the JavaScript language, have the function FirstReverse(str) take the str parameter being passed and return the string in reversed order.
       <pre class="small">
       <code>
-        function FirstReverse(str) {  
-          return str.split('').reverse().join('');        
+        function FirstReverse(str) {
+          return str.split('').reverse().join('');
         }
 
-        FirstReverse('cheese');  
+        FirstReverse('cheese');
       </code>
     </pre>
-    </li> 
-    
+    </li>
+
       <li class="code-block" onClick='toggleBlock(event)'>
         Using the JavaScript language, have the function FirstFactorial(num) take the num parameter being passed and return the factorial of it (e.g. if num = 4,
         return (4 * 3 * 2 * 1)). For the test cases, the range will be between 1 and 18.
 
         <pre class="small">
         <code>
-          function FirstFactorial(num) { 
+          function FirstFactorial(num) {
             var factorial = num;
             for (var i = num - 1; i > 0; i--) {
                 factorial = factorial * i;
             }
-            return factorial;          
+            return factorial;
           }
-            
-          FirstFactorial(24);     
+
+          FirstFactorial(24);
         </code>
         </pre>
       </li>
-    
+
       <li class="code-block" onClick='toggleBlock(event)'>
-        Using the JavaScript language, have the function LongestWord(sen) take the sen parameter being passed and return the largest word in the string. If there are two or more words that are the same length, return the first word from the string with that length. Ignore punctuation and assume sen will not be empty. 
-        
+        Using the JavaScript language, have the function LongestWord(sen) take the sen parameter being passed and return the largest word in the string. If there are two or more words that are the same length, return the first word from the string with that length. Ignore punctuation and assume sen will not be empty.
+
         <pre class="large">
         <code>
-          function LongestWord(sen) { 
+          function LongestWord(sen) {
             //filter out non alphanumeric characters
             var words = sen.match(/[a-z0-9]+/gi)
-          
+
             //Use array sort function to sort array
             words.sort(function(a,b) {
               return a.length < b.length
             })
-          
-            return words[0]; 
+
+            return words[0];
           }
-          
-          LongestWord('The longest word is Volkswagon');   
+
+          LongestWord('The longest word is Volkswagon');
         </code>
         </pre>
 
       </li>
 
       <li class="code-block" onClick='toggleBlock(event)'>
-        Using the JavaScript language, have the function LetterChanges(str) take the str parameter being passed and modify it using the following algorithm. Replace every letter in the string with the letter following it in the alphabet (ie. c becomes d, z becomes a). Then capitalize every vowel in this new string (a, e, i, o, u) and finally return this modified string. 
+        Using the JavaScript language, have the function LetterChanges(str) take the str parameter being passed and modify it using the following algorithm. Replace every letter in the string with the letter following it in the alphabet (ie. c becomes d, z becomes a). Then capitalize every vowel in this new string (a, e, i, o, u) and finally return this modified string.
 
         <pre class="large">
         <code>
-          function LetterChanges(str) { 
+          function LetterChanges(str) {
               var stringArray = str.split('');
               var newArray = stringArray;
-              
+
               // Replace with next letter
               stringArray.forEach(function(letter, i) {
                   //check if it's a letter
                   if (letter.match(/[a-z]/i)) {
                       newArray[i] = (letter === 'z' || letter === 'Z') ? 'a' : String.fromCharCode(str.charCodeAt(i) + 1)
                   }
-                  
+
                   if (newArray[i].match(/a|e|i|o|u/gi)) {
                       newArray[i] = newArray[i].toUpperCase();
                   }
               })
-              return newArray; 
-                      
+              return newArray;
+
           }
-            
-          LetterChanges('Hello World');                            
+
+          LetterChanges('Hello World');
 
         </code>
         </pre>
       </li>
 
-    
+
       <li class="code-block" onClick='toggleBlock(event)'>
-        Using the JavaScript language, have the function SimpleAdding(num) add up all the numbers from 1 to num. For the test cases, the parameter num will be any number from 1 to 1000. 
+        Using the JavaScript language, have the function SimpleAdding(num) add up all the numbers from 1 to num. For the test cases, the parameter num will be any number from 1 to 1000.
 
         <pre class="small">
         <code>
-          function SimpleAdding(num) { 
+          function SimpleAdding(num) {
               var sum = 0;
               for (var i = 0; i < num; i++) {
                   sum += i + 1;
               }
-          return sum; 
+          return sum;
           }
-          
-          SimpleAdding(8);  
+
+          SimpleAdding(8);
         </code>
         </pre>
       </li>
 
       <li class="code-block" onClick='toggleBlock(event)'>
         To be a senior, a member must be at least 55 years old and have a handicap greater than 7.
-        
+
         Input will consist of a list of lists containing two items each. Each list contains information for a single potential member. Information consists of an integer for the person's age and an integer for the person's handicap.
-        
+
         Output should display whether the memeber is in the "Open" category or "Senior" category.
 
         <pre class="large">
         <code>
           function openOrSenior(data){
             var results = [];
-            
+
             if (data.length === 0) return results;
-            
+
             data.forEach(function(member) {
               if (member[0] >54 && member[1] > 7) {
                 results.push('Senior');
@@ -130,10 +130,10 @@
                 results.push('Open');
               }
             });
-            
+
             return results;
           }
-        </code>          
+        </code>
         </pre>
       </li>
 
@@ -143,7 +143,7 @@
         <code>
           String.prototype.toJadenCase = function() {
             return this.valueOf().split(' ').map(word => (word[0].toUpperCase() + word.slice(1))).join(' ');
-          } 
+          }
         </code>
         </pre>
       </li>
@@ -154,7 +154,7 @@
           n^3 + (n-1)^3 + ... + 1^3 = m
 
         <pre class="large">
-        
+
         <code>
           var findN = function(m) {
           var n = 1;
@@ -168,12 +168,60 @@
             prev = check;
             n++;
             check = Math.pow(n,3) + prev;
-          } 
+          }
           return -1;
-        } 
+        }
         </code>
+        </pre>
+      </li>
+
+      <li class="code-block" onClick='toggleBlock(event)'>
+        Given an array, find the int that appears an odd number of times.
+
+        There will always be only one integer that appears an odd number of times.
+        <pre class='large'>
+          <code>
+            function findOdd(A) {
+              var sorted = A.sort();
+              var previous = sorted[0];
+              var count = 0;
+
+              if (sorted.length === 1) return sorted[0];
+
+              for (var i = 0; i < sorted.length; i++) {
+                if (sorted[i] !== previous && count % 2 !== 0) {
+                  return sorted[i-1];
+                } else if (i === sorted.length - 1) {
+                  return sorted[i]
+                } else if (sorted[i] !== previous && count % 2 === 0) {
+                  count = 0
+                }
+                count++;
+                previous = sorted[i];
+              }
+            }
+          </code>
+        </pre>
+      </li>
+
+      <li class="code-block" onClick='toggleBlock(event)'>
+        Given an array of 3 numbers, calculate and return the results of doing a "Tribonacci" sequence up to the nth cycle
+        <pre class='large'>
+          <code>
+            function tribonacci(signature,n){
+              if (n === 0) return [];
+              if (n <= 3) return signature.slick(0, n);
+              var result = signature.slice(0, signature.length);
+              for (var i = 3; i < n; i++) {
+                result.push(signature[0] + signature[1] + signature[2]);
+                signature[0] = signature[1];
+                signature[1] = signature[2];
+                signature[2] = result[result.length - 1];
+              }
+              return result;
+            }
+          </code>
         </pre>
       </li>
   </ol>
 </div>
-
