--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -3,13 +3,14 @@
 </div>
 
 <div class="page-content">
-    <h2>Micro Badges</h2>
+  <h2>Micro Badges</h2>
+  <div class='apprentice-list'>
     <ol>
       <li>
-        <a href="#/javascript/languageBasics">JavaScript Language Basics</a>
+        <a href="#/javascript/languageBasics">JavaScript Language Basics</a>&nbsp;<input type="checkbox" checked>
       </li>
       <li>
-        <a href="#/">JavaScript Common Pitfalls</a>
+        <a href="#/javascript/pitfalls">JavaScript Common Pitfalls</a>
       </li>
       <li>
         <a href="#">Linting & JavaScript Style Guide</a>
@@ -24,4 +25,5 @@
         <a href="#">JavaScript Debugging</a>
       </li>
     </ol>
+  </div>
 </div>
