Check off common pitfalls

--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -10,7 +10,7 @@
         <a href="#/javascript/languageBasics">JavaScript Language Basics</a>&nbsp;<input type="checkbox" checked>
       </li>
       <li>
-        <a href="#/javascript/pitfalls">JavaScript Common Pitfalls</a>
+        <a href="#/javascript/pitfalls">JavaScript Common Pitfalls</a>&nbsp;<input type="checkbox" checked>
       </li>
       <li>
         <a href="#">Linting & JavaScript Style Guide</a>
