--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -7,13 +7,13 @@
   <div class='apprentice-list'>
     <ol>
       <li>
-        <a href="#/javascript/languageBasics">JavaScript Language Basics</a>&nbsp;<input type="checkbox" checked>
+        <a href="#/javascript/languageBasics">JavaScript Language Basics</a>&nbsp;✔
       </li>
       <li>
-        <a href="#/javascript/pitfalls">JavaScript Common Pitfalls</a>&nbsp;<input type="checkbox" checked>
+        <a href="#/javascript/pitfalls">JavaScript Common Pitfalls</a>&nbsp;✔
       </li>
       <li>
-        <a href="#">Linting & JavaScript Style Guide</a>
+        <a href="#/javascript/linting">Linting & JavaScript Style Guide</a>
       </li>
       <li>
         <a href="#">Essential JavaScript Patterns</a>
