--- a/styles/main.css
+++ b/styles/main.css
@@ -35,9 +35,15 @@ pre {
 	background-color: black;
 }
 
+code {
+  font-size: 16px;
+  background-color: #EEEEEE;
+}
+
 pre > code {
-  font-size: 18px;
+  font-size: 16px;
   color: springgreen;
+  background-color: black;
 }
 
 .container, pre {
