Add Zelda Clone

--- a/views/projects.html
+++ b/views/projects.html
@@ -1,9 +1,10 @@
 <div class="page-title page-projects">
-	<h1>Projects</h1>	
+	<h1>Projects</h1>
 </div>
 
 <div class="page-content">
 	<h2><a href="../projects/melon/index.html"> MelonJs Game</a></h2>
 	<h2><a href="../projects/snake.html">Canvas Snake</a></h2>
 	<h2><a href="../projects/phaser/phaser-dude/phaser-dude.html">Phaser Dude</a></h2>
+	<h2><a href="../projects/phaser/zelda/index.html">Zelda Clone</a></h2>
 </div>
