Finish linting microbadge

--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -13,7 +13,7 @@
         <a href="#/javascript/pitfalls">JavaScript Common Pitfalls</a>&nbsp;✔
       </li>
       <li>
-        <a href="#/javascript/linting">Linting & JavaScript Style Guide</a>
+        <a href="#/javascript/linting">Linting & JavaScript Style Guide</a>&nbsp;✔
       </li>
       <li>
         <a href="#">Essential JavaScript Patterns</a>
