--- a/views/javascript/linting.html
+++ b/views/javascript/linting.html
@@ -24,7 +24,7 @@
       Setup ESLint plugin for Editor (linter-eslint for Atom) ✔
     </li>
     <li>
-      Make a way to run ESLint against your project files on changes
+      Make a way to run ESLint against your project files on changes ✔
     </li>
   </ul>
 
