Add essential javascript patterns

--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -16,7 +16,7 @@
         <a href="#/javascript/linting">Linting & JavaScript Style Guide</a>&nbsp;✔
       </li>
       <li>
-        <a href="#">Essential JavaScript Patterns</a>
+        <a href="#/javascript/patterns">Essential JavaScript Patterns</a>&nbsp;✔
       </li>
       <li>
         <a href="#">JavaScript Module Formats</a>
