--- a/views/javascript/apprentice.html
+++ b/views/javascript/apprentice.html
@@ -16,13 +16,13 @@
         <a href="#/javascript/linting">Linting & JavaScript Style Guide</a>&nbsp;✔
       </li>
       <li>
-        <a href="#/javascript/patterns">Essential JavaScript Patterns</a>
+        <a href="#/javascript/patterns">Essential JavaScript Patterns</a>&nbsp;✔
       </li>
       <li>
-        <a href="#/javascript/modules">JavaScript Module Formats</a>
+        <a href="#/javascript/modules">JavaScript Module Formats</a>&nbsp;✔
       </li>
       <li>
-        <a href="#/javascript/debugging">JavaScript Debugging</a>
+        <a href="#/javascript/debugging">JavaScript Debugging</a>&nbsp;✔
       </li>
     </ol>
   </div>
