--- a/views/projects.html
+++ b/views/projects.html
@@ -6,5 +6,6 @@
 	<h2><a href="../projects/melon/index.html"> MelonJs Game</a></h2>
 	<h2><a href="../projects/snake.html">Canvas Snake</a></h2>
 	<h2><a href="../projects/phaser/phaser-dude/phaser-dude.html">Phaser Dude</a></h2>
-	<h2><a href="../projects/phaser/zelda/index.html">Zelda Clone</a></h2>
+  <h2><a href="../projects/phaser/zelda/index.html">Zelda Clone</a></h2>
+  <h2><a href="../projects/web-audio/index.html">Web Audio Recording</a></h2>
 </div>
