--- a/views/blog/linked-list.html
+++ b/views/blog/linked-list.html
@@ -4,7 +4,7 @@
 
 	<p>
 		First, we need to set up some objects that we will use.
-		The first object is our going to be our Node object. 
+		The first object is going to be our Node object. 
 	</p>
 </div>
 <pre>
@@ -13,6 +13,7 @@
 function Node(data) {
   this.data = data;
   this.next = null;
+}
 	</code>
 </pre>
 
@@ -28,6 +29,7 @@ function Node(data) {
 function LinkedList() {
   this.head = null;
   this.length = 0;
+}
 	</code>
 </pre>
 
@@ -59,6 +61,7 @@ LinkedList.prototype.add = function(value) {
   currentNode.next = node;
   this.length++;
   return node;
+}
 	</code>
 </pre>
 
@@ -71,15 +74,15 @@ LinkedList.prototype.add = function(value) {
 <pre>
 	<code>
 LinkedList.prototype.findNode = function (position) {
-var currentNode = this.head,
-count = 1;
+  var currentNode = this.head,
+  count = 1;
 
-
-while (count < position) {
-  currentNode = currentNode.next;
-  count++;
+  while (count < position) {
+    currentNode = currentNode.next;
+    count++;
+  }
+  return currentNode;
 }
-return currentNode;
 	</code>
 </pre>
 
