--- a/views/skills.html
+++ b/views/skills.html
@@ -5,41 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Skills Development</title>
+  <link rel="stylesheet" href="../styles/header-footer.css">
+  <script type="module" src="../web-components/my-footer.js"></script>
 </head>
 <body>
-  <div class="page-title page-skills">
-    <h1>Skills Development</h1>
+  <header>
+    <div class="hero">
+      <h1><a href="../index.html">chadeddington.github.io</a></h1>
+      <h3>A sample github.io page</h3>
+    </div>
+  </header>
+  <div class="container">
+    <div class="page-title page-skills">
+      <h1>Skills Development</h1>
+    </div>
+    <div class="page-content">
+      <p class="link">Taken from <a href="https://github.com/fs-webdev/skill-building-program">Family Search Skill Building Program</a></p>
+    
+      <h2 class='skills-title'>HTML5</h2>
+      <div class='skills-box'>
+        <div class='link'><a href="html5/apprentice.html">Apprentice</a></div>
+        <div class='link'><a href="">Journeyman</a></div>
+        <div class='link'><a href="">Master</a></div>
+      </div>
+    
+      <h2 class='skills-title'>JavaScript</h2>
+      <div class='skills-box'>
+        <div class='link'><a href="javascript/apprentice.html">Apprentice</a></div>
+        <div class='link'><a href="">Journeyman</a></div>
+        <div class='link'><a href="">Master</a></div>
+      </div>
+    
+      <h2 class='skills-title'>Performance</h2>
+      <div class='skills-box'>
+        <div class='link'><a href="">Apprentice</a></div>
+        <div class='link'><a href="">Journeyman</a></div>
+        <div class='link'><a href="">Master</a></div>
+      </div>
+    
+      <h2 class='skills-title'>Web Components</h2>
+      <div class='skills-box'>
+        <div class='link'><a href="wc/apprentice">Apprentice</a></div>
+        <div class='link'><a href="">Journeyman</a></div>
+        <div class='link'><a href="">Master</a></div>
+      </div>
+    </div>
   </div>
-  <div class="page-content">
-    <p>Taken from <a href="https://github.com/fs-webdev/skill-building-program">Family Search Skill Building Program</a></p>
-  
-    <h2 class='skills-title'>HTML5</h2>
-    <div class='skills-box'>
-      <div class='skills-item'><a href="html5/apprentice">Apprentice</a></div>
-      <div class='skills-item'><a href="">Journeyman</a></div>
-      <div class='skills-item'><a href="">Master</a></div>
-    </div>
-  
-    <h2 class='skills-title'>JavaScript</h2>
-    <div class='skills-box'>
-      <div class='skills-item'><a href="javascript/apprentice">Apprentice</a></div>
-      <div class='skills-item'><a href="">Journeyman</a></div>
-      <div class='skills-item'><a href="">Master</a></div>
-    </div>
-  
-    <h2 class='skills-title'>Performance</h2>
-    <div class='skills-box'>
-      <div class='skills-item'><a href="">Apprentice</a></div>
-      <div class='skills-item'><a href="">Journeyman</a></div>
-      <div class='skills-item'><a href="">Master</a></div>
-    </div>
-  
-    <h2 class='skills-title'>Web Components</h2>
-    <div class='skills-box'>
-      <div class='skills-item'><a href="wc/apprentice">Apprentice</a></div>
-      <div class='skills-item'><a href="">Journeyman</a></div>
-      <div class='skills-item'><a href="">Master</a></div>
-    </div>
-  </div>
+
+  <my-footer></my-footer>
 </body>
 </html>
