--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -14,6 +14,11 @@ body {
 .hero h1 {
   color: white;
   margin: 0px;
+  font-weight: normal;
+}
+
+.hero h3 {
+  font-weight: lighter;
 }
 
 .hero a {
