--- a/views/skills.html
+++ b/views/skills.html
@@ -12,7 +12,7 @@
   <header>
     <div class="hero">
       <h1><a href="../index.html">chadeddington.github.io</a></h1>
-      <h3>A sample github.io page</h3>
+      <div class="sub">A sample github.io page</div>
     </div>
   </header>
   <div class="container">
