Update css apprentice

--- a/views/skills.html
+++ b/views/skills.html
@@ -10,21 +10,27 @@
 </head>
 <body>
   <header>
+    <div class="img-wrapper">
+      <a href="../../index.html"><img src="/assets/images/standing_on_chair.JPG" alt=""></a>
+    </div>
     <div class="hero">
-      <h1><a href="../index.html">chadeddington.github.io</a></h1>
-      <div class="sub">A sample github.io page</div>
+      <h1>Skills Development</h1>
     </div>
   </header>
   <div class="container">
-    <div class="page-title page-skills">
-      <h1>Skills Development</h1>
-    </div>
     <div class="page-content">
       <p class="link">Taken from <a href="https://github.com/fs-webdev/skill-building-program">Family Search Skill Building Program</a></p>
     
       <h2 class='skills-title'>HTML5</h2>
       <div class='skills-box'>
         <div class='link'><a href="html5/apprentice.html">Apprentice</a></div>
+        <div class='link'><a href="">Journeyman</a></div>
+        <div class='link'><a href="">Master</a></div>
+      </div>
+
+      <h2 class='skills-title'>CSS</h2>
+      <div class='skills-box'>
+        <div class='link'><a href="css/apprentice.html">Apprentice</a></div>
         <div class='link'><a href="">Journeyman</a></div>
         <div class='link'><a href="">Master</a></div>
       </div>
