--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -4,6 +4,18 @@ body {
   margin: 0px;
 }
 
+.img-wrapper {
+  position: absolute;
+  top: 16px;
+  left: 50px;
+}
+.img-wrapper img {
+  height: 100px;
+  border-radius: 50%;
+  transform: rotateY(180deg);
+  border: 5px solid white;
+}
+
 .hero {
   text-align: center;
   /* border-bottom: 4px solid #2196f3; */
@@ -84,5 +96,11 @@ footer .link a:visited {
   .column {
     width: 150px;
     margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 679px) {
+  .img-wrapper {
+    display: none;
   }
 }
