--- a/views/html5/apprentice.html
+++ b/views/html5/apprentice.html
@@ -61,16 +61,14 @@
 </head>
 <body>
   <header role="banner">
+  <div class="img-wrapper">
+    <a href="../../index.html"><img src="/assets/images/standing_on_chair.JPG" alt=""></a>
+  </div>
     <div class="hero">
-      <h1><a href="../../index.html">chadeddington.github.io</a></h1>
-      <div class="sub">A sample github.io page</div>
+      <h1>HTML Apprentice</h1>
     </div>
   </header>
   <main class="container" role="main">
-    <div class="page-title page-skills">
-      <h1>HTML Apprentice</h1>
-    </div>
-  
     <div class="section">
       <h2>Requirements</h2>
       <h3>Semantic HTML</h3>
